--- a/package.json
+++ b/package.json
@@ -21,8 +21,12 @@
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react-swc": "^3.8.0",
     "eslint": "^9.21.0",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react-dom": "^1.40.2",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "eslint-plugin-react-x": "^1.40.2",
     "globals": "^15.15.0",
     "prettier-plugin-jsdoc": "^1.3.2",
     "prettier-plugin-organize-imports": "^4.1.0",
